test_regress/t/t_flag_topmodule_bad.out
%Warning-MULTITOP: t/t_flag_topmodule.v:15:8: Multiple top level modules
                                            : ... Suggest see manual; fix the duplicates, or use --top-module to select top.
                   ... For warning description see https://verilator.org/warn/MULTITOP?v=latest
                   ... Use "/* verilator lint_off MULTITOP */" and lint_on around source to disable this message.
                                            : ... Top module 'a'
    7 | module a;
      |        ^
                                            : ... Top module 'a2'
   15 | module a2;
      |        ^~
                                            : ... Top module 'b'
   22 | module b;
      |        ^
%Error: Exiting due to
